--- a/src/style/blocks/game.less
+++ b/src/style/blocks/game.less
@@ -26,7 +26,8 @@
   .game__link{
     cursor: pointer;
     width: 150px;
-    .text-center;
+  }  
+  .text-center {
     padding: 10px;
     border: none;
     border-radius: px;
