--- a/src/component/About/About.css
+++ b/src/component/About/About.css
@@ -1,66 +1,7 @@
-<!-- содержимое секции компонента. Все содержимое необходимо размещать внутри тега section -->
-<template>
-  <section id="about">
-    <div class="about__image"></div>
-    <div class="about__wrapper">
-      <!-- <img src="../../static/img/logo_with_text.png" alt="main_logo"> -->
-      <div class="event-info">2 марта в 13.30</div>
-      <div class="event-info">Ресторан Welten</div>
-      <div class="event-info">(ул. Пушкинская, 130а)</div>
-      <div class="event-button">
-        <v-btn class="registration-button white--text" href="/game/5">Правила</v-btn>
-        <v-btn class="registration-button white--text" id="twf" v-bind:data-twf-target-state="this.registrationLink">Принять участие</v-btn>
-        <v-btn class="registration-button white--text" href="/event/901674">О мероприятии</v-btn>
-      </div>
-    </div>
-    <div class="abount__margin-wrapper">
-      <p class="about__description">
-        Это мини-хакатон для тех, кто любит программирование,
-        искусственный интеллект и сражения ботов. Порог вхождения в Code Battle минимален:
-        любой может прийти и уже через 45 минут запустить своего бота сражаться с соперниками.
-        Все сражения демонстрируются на большом экране в режиме реального времени.
-      </p>
-      <div class="about__card-wrapper">
-        <div class="about__card">
-          <v-icon class="xsize">extension</v-icon>
-          <div class="about__card-text">Программирование как игра</div>
-        </div>
-        <div class="about__card">
-          <v-icon class="xsize" >supervisor_account</v-icon>
-          <div class="about__card-text">Новые знакомства</div>
-        </div>
-        <div class="about__card">
-          <v-icon class="xsize" >code</v-icon>
-          <div class="about__card-text">Практика, а не теория</div>
-        </div>
-        <div class="about__card">
-          <v-icon class="xsize" >thumb_up</v-icon>
-          <div class="about__card-text">Море эмоций</div>
-        </div>
-      </div>
-    </div>
-  </section>
-</template>
-<!-- код, который относится непосредственно к компоненту -->
-<script>
-export default {
-  name: 'About',
-  data: () => ({
-    registrationLink: `{"event_id": 901674}`
-  }),
-  methods: {
-    changeHash () {
-      this.$router.push('#about')
-    }
-  }
-}
-</script>
-<!-- стили, которые относятся непосредственно к компоненту -->
-<style scoped>
-  .about__image {
+.about__image {
     position: relative;
     height: 800px;
-    background-image: url('../../static/img/sm_banner.jpg');
+    background-image: url('../../../static/img/sm_banner.jpg');
     background-size: cover;
     background-position: 0 0;
     box-shadow: 0px 10px 33px -6px rgba(0,0,0,1);
@@ -291,4 +232,3 @@ export default {
     top: -215px;
   }
 }
-</style>
